MobileApp/www/css/style.css
/* ... */
.green-card
{
  box-shadow: 0 1px 4px 0 rgb(0, 255, 0) !important;
}
.blue-card
{
  box-shadow: 0 1px 4px 0 deepskyblue !important;
}
.QuotationListContent .label
{
   font-size: 16px !important;
   text-transform: capitalize !important;
   font-weight: normal !important;
}
.padding10
{
  padding: 10px;
}
.emp-list .item-block .item-inner
{
    border-bottom: 0 !important;
}
.emp .item-inner
{
    border-bottom: 0 !important;
}
.emp-round
{
  width: 40px;
  height: 40px;
  border-radius:50%;
  background-color: #000000;
  margin: 0 auto !important;
}
.emp-round p
{
  font-weight:bold;
  color:#ff9800 !important;
  text-align: center !important;
  vertical-align: middle !important;
  line-height: 38px !important;
      font-size: 14px;
}
.emp-round-active
{
  background-color: #ff9800 !important;
}
.emp-round-active p
{
  color: #000000 !important;
}
.width-round
{
  width: 40px;
  height: 40px;
}
.width-round img
{
  border-radius: 50% !important;
}
.align-right
{
  float: right;
}
.add-btn
{
  width: 40px;
  color: orange !important;
  font-size: 20px !important;
}
.select-box
{
  max-width:100%;
  border-bottom: 1px solid #dedede;
}
.camera-btn
{
  background-color: orange;
  color: #FFFFFF;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  font-size: 20px;
  line-height: 25px;
}
.line-height
{
  line-height:35px;
}
.margin-bottom25
{
  margin-bottom:25px !important;
}
.margin-bottom5
{
  margin-bottom: 5px;
}
.content-md
{
  background-color:#EEEEEE !important;
}
.width98
{
  width:98%;
}
.margin-side-auto
{
  margin-left: auto !important;
  margin-right: auto !important;
}


.item-label .label-md
{
  margin: 0 !important;
}
.radio-label
{
  color: black;
  text-align: left;
}
.width50
{
  width: 50% !important;
}
.inline-block
{
  display: inline-block !important;
}

.select-rate {
  position: absolute;
}
.table>thead>tr>th
{
  font-size:14px !important;
}
.padding-bottom3
{
  padding-bottom: 3px !important;
}
.width15
{
  width: 15px !important;
}
.table-scroll
{
  width: 500px;
  overflow-x: scroll;
}
.width100
{
  width: 100px;
}
.table-data
{
  width: 85px;
  overflow: hidden;
  white-space: initial !important;
}
.width95
{
  width: 95% !important;
}
.error
{
  color:red;
}
.fnt-wt
{
  font-weight: 300 !important;
}
.bottom-border
{
  border-bottom: 1px solid #eeeeee !important;
}
.login-bg-img
{
 /* background: url('img/login.jpeg'); */
}
.width90
{
  width: 90%;
}
.padding-top25
{
  padding-top: 25px !important;
}
.clr-blk
{
  color: #000000;
}
.clr-blue
{
  color: #00bcd4;
}
.bottom-div
{
  position:absolute;
  bottom:0;
}
.clr-white
{
  color: #FFFFFF;
}
.margin-bottom
{
  margin-bottom: 15%;
}
.pos-abs
{
  position: absolute;
  top: 9%;
  left: 5%;
}
.card [data-background-color]
{
  margin: -20px 60px 0 !important;
}
a:hover, a:focus
{
  color: #000000;
}
.login .scroll-content
{
  background: url(img/login.jpeg);
}
.padding-right5
{
    padding-right: 5px;
}
.padding-bottom5
{
    padding-bottom: 5px;
}
.padding-top40
{
  padding-top: 40px !important;
}
.error-msg {
  color: #f44336;
}
.form-group.is-focused .form-control
{
  background-image: linear-gradient(#ff9800, #ff9800), linear-gradient(#D2D2D2, #D2D2D2) !important;
}
.form-control,
.form-group .form-control
{
  background-image: linear-gradient(#ff9800, #ff9800), linear-gradient(#D2D2D2, #D2D2D2) !important;
}
.form-group.has-error .form-control {
  background-image: linear-gradient(#f44336, #f44336), linear-gradient(#D2D2D2, #D2D2D2) !important;
}
.icon-round
{
  width: 100px !important;
  height: 45px !important;
  border-radius: 50% !important;
}
.icon-round-green
{
  border: 1px solid #4caf50 !important;
  color: #4caf50 !important;
}
.icon-round-red
{
  border: 1px solid #f44336 !important;
  color: #f44336 !important;
}
.icon-round-blue
{
  border: 1px solid #00acc1 !important;
  color: #00acc1 !important;
}
.icon-round-orange
{
  border: 1px solid #ff9800 !important;
  color: #ff9800 !important;
}
.fnt-24
{
  font-size: 24px !important;
}
.timeline>li>.timeline-badge
{
  width: 25px !important;
  height: 25px !important;

}
.IonList .item-md
{
  padding-left:0;
}
.orange-icon
{
  color:#FFAA22;
}
.item-fnt p
{
  font-weight: 300;
}
.item-fnt .label-md
{
  margin:0 !important;
}
.item-fnt .item-md.item-block .item-inner
{
   padding-right: 0 !important;
}
.padding-left16
{
  padding-left: 16px !important;
}
.padding-right10
{
  padding-right: 10px !important;
}
.padding-left10
{
  padding-left:10px;
}
.border-btm
{
  border-bottom: 1px solid #eeeeee;
}
p.titleTxt
{
  font-weight:600;
  padding:8px 0;
}
.padding-top5
{
  padding-top: 5px !important;
}
.padding-top10
{
  padding-top: 10px !important;
}
.padding-top15
{
  padding-top: 15px !important;
}
.ln-ght20 p
{
  line-height: 20px !important;
}
.q-round
{
  width: 90% !important;
  height: 90% !important;
  border-radius: 50% !important;
  /*border: 1px solid #ff9800;*/
}
.fab-md-dark
{
  color: #ff9800 !important;
}
.bg-orange
{
  background-color:#ff9800 !important;
}
ion-fab-list
{
  left:-9px !important;
}
.empl-round
{
  width: 25%;
  border-radius: 50%;
  background-color: #ccc;
  padding: 7px;
}
.view-img ion-backdrop
{
  opacity: 0.7 !important;
}
.job-img
{
  transform: rotate(90deg);
}
.paddding-top20
{
  padding-top: 20px;
}
ion-spinner{
  width: 20px !important;
  height: 20px !important;
  stroke: #ff9800 !important;
  fill:#ff9800 !important;
}
.margin-right15
{
  margin-right: 15px;
}
.emp .item-md.item-block .item-inner
{
  padding-right: 0 !important;
}
.emp .label-md
{
  margin: 0 !important;
}
.padding5
{
  padding:5px;
}
.map
{
  height: 50%;
  border: 1px solid #c0c1c2;
}
.margin-bottom0
{
  margin-bottom: 0 !important;
}
.margin-left-right0
{
  margin-right: 0 !important;
  margin-left: 0 !important;
}
.wrap-name
{
  font-size: 10px !important;
      text-overflow: ellipsis;
      overflow: hidden;
      width: 50px;
      margin: auto !important;
      white-space: nowrap;
      color: #000 !important;
      padding-top: 5px;
}
/* ... */

